--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,4 +1,5 @@
-<div>
+<%# <div> %>
+<%# ②divタグ不要 %>
   <%= form_with model: @plan, url: calendars_path, class: 'form' do |f| %>
     <%= f.label :日付を選択, class: 'lavel' %>
     <%= f.date_field :date, class: 'date-select' %>
@@ -6,8 +7,11 @@
     <%= f.text_field :plan, class: 'text-input' %>
     <%= f.submit '保存' %>
   <% end %>
-</div>
-<div>
+<%# </div> %>
+<%# ②の不要終了タグ %>
+
+<%# <div> %> 
+<%# ①divタグ不要 %>
   <div class='calendar'>
     <% @week_days.each do |day| %>
       <div class='item'>
@@ -24,4 +28,5 @@
       </div>
     <% end %>
   </div>
-</div>
+<%# </div> %>
+<%# ①の不要終了タグ %>
