--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,5 +1,4 @@
-<%# <div> %>
-<%# ②divタグ不要 %>
+<div>
   <%= form_with model: @plan, url: calendars_path, class: 'form' do |f| %>
     <%= f.label :日付を選択, class: 'lavel' %>
     <%= f.date_field :date, class: 'date-select' %>
@@ -7,11 +6,8 @@
     <%= f.text_field :plan, class: 'text-input' %>
     <%= f.submit '保存' %>
   <% end %>
-<%# </div> %>
-<%# ②の不要終了タグ %>
-
-<%# <div> %> 
-<%# ①divタグ不要 %>
+</div>
+<div>
   <div class='calendar'>
     <% @week_days.each do |day| %>
       <div class='item'>
@@ -28,5 +24,4 @@
       </div>
     <% end %>
   </div>
-<%# </div> %>
-<%# ①の不要終了タグ %>
+</div>
